Added first pdf ref.

--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -25,8 +25,7 @@
    "metadata": {},
    "source": [
     "<H2>Deep Probabilistic Generative Models</H2>\n",
-    "<H2>Latent Variables</H2>\n",
-    "<H2>Diffusion Models</H2>\n"
+    "<H2>Latent Variables</H2>\n"
    ]
   },
   {
@@ -35,6 +34,27 @@
    "source": [
     "<H2>Variational Inference</H2>\n",
     "<H2>Variational Auto Encoder</H2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H2>Diffusion Models</H2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(!)In contrast to variational autoencoders where latent variables are directly sampled from a predefined distribution, diffusion models apply progressively more noise to the data during a sequence of transformation steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A diffusion model applies a forward process of $T\\in(0,\\inf)$ sequential transformations, $\\xrightarrow{\\text{forward}}$, to a random variable $x_{0}$ "
    ]
   },
   {
@@ -61,7 +81,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $q(x_{t}|x_{t_1})\\sim\\mathcal{N}(x_{t};\\sqrt{1-\\beta}x_{t-1},\\beta_{t}I)\\quad\\quad\\quad\\quad\\quad\\quad\\quad\\text{(where}\\beta_{t}\\text{is the variance at time t)}$<br>"
+    "Let $q(x_{t}|x_{t-1})\\sim\\mathcal{N}(x_{t};\\sqrt{1-\\beta}x_{t-1},\\beta_{t}I)\\quad\\quad\\quad\\quad\\quad\\quad\\quad$<br>\n",
+    "$\\text{where:}\\quad\\quad\\quad\\beta_{t}\\text{is the variance at time t}$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\quad\\quad \\beta_{1}\\lt\\beta_{2}\\lt\\dots\\beta_{T}$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\quad\\quad \\beta_{t}\\in(0, 1)$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Axiom: $q(x_{T}|x_{0})\\rightarrow\\mathcal{N}(0,I)$ as $T\\rightarrow\\inf$.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Soft Constraint: $B_{t}\\lt\\lt1$<br>"
    ]
   }
  ],
