Added references section to probabilistic-deep-learning.ipynb.

--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(!)In contrast to variational autoencoders where latent variables are directly sampled from a predefined distribution, diffusion models apply progressively more noise to the data during a sequence of transformation steps."
+    "(!)In contrast to variational autoencoders where latent variables are directly sampled from a predefined distribution, diffusion models apply progressively more noise to the data during a sequence of transformation steps. A neural network can be trained to learn how to generate samples"
    ]
   },
   {
@@ -72,9 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each latent variable $x_{t}\\in x_{1:t}$ consists of the sum of noise and the value of $x_{t-1}$.<br>\n",
+    "Each latent variable $x_{t}\\in x_{1:T}$ consists of the sum of noise and the value of $x_{t-1}$.<br>\n",
     "The joint distribution $q(x_{1:T}|x_{0})$ of latent variables $x_{1:T}$ given the original manifest variable $x_{0}$ is memoryless.<br>\n",
-    "$q(x_{t:T}|x_{0})=\\prod_{t=1}^{T}{q(x_{t}|x_{t-1})}\\quad\\quad\\quad\\quad\\text{(Markov Property)}$<br>"
+    "$q(x_{t:T}|x_{0})=\\prod\\limits_{t=1}^{T}{q(x_{t}|x_{t-1})}\\quad\\quad\\quad\\quad\\text{(Markov Property)}$<br>"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "source": [
     "Let $q(x_{t}|x_{t-1})\\sim\\mathcal{N}(x_{t};\\sqrt{1-\\beta}x_{t-1},\\beta_{t}I)\\quad\\quad\\quad\\quad\\quad\\quad\\quad$<br>\n",
     "$\\text{where:}\\quad\\quad\\quad\\beta_{t}\\text{is the variance at time t}$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad\\quad \\beta_{1}\\lt\\beta_{2}\\lt\\dots\\beta_{T}$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\quad\\quad \\beta_{1}\\lt\\beta_{2}\\lt\\dots<\\beta_{T}$<br>\n",
     "$\\quad\\quad\\quad\\quad\\quad\\quad \\beta_{t}\\in(0, 1)$<br>"
    ]
   },
@@ -98,7 +98,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Soft Constraint: $B_{t}\\lt\\lt1$<br>"
+    "Let's constrain ourselves to a versy small $B_{t}\\ll1$.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H2>References</H2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Sohl-Dickstein J. et. al., \"Deep Unsupervised Learning using\n",
+    "Nonequilibrium Thermodynamics\" arXiv:1503.03585v, rev. Nov. 18, 2015."
    ]
   }
  ],
