--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -259,6 +259,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,6 +306,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<H3>Model Architecture U-Net</H3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ho et al. Describe the model architecture they used in [3].\n",
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H3>Training Algorithm</H3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\text{1.}\\quad\\text{repeat}$<br>\n",
+    "$\\text{2.}\\quad\\quad\\ x_{0}\\sim\\ q({x_{0}})$<br>\n",
+    "$\\text{3.}\\quad\\quad\\ t\\sim\\text{Uniform}({1,\\dots,T})$<br>\n",
+    "$\\text{4.}\\quad\\quad\\ \\epsilon\\sim\\mathcal{N}(0,I)$<br>\n",
+    "$\\text{5.}\\quad\\quad\\ \\text{Take gradient descent step on}$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\nabla_{\\theta}\\text{\\\\}\\epsilon\\ -\\ \\epsilon_{\\theta}(\\sqrt{\\bar{\\alpha_{t}}}x_{0} + \\sqrt{1-\\bar{\\alpha_{t}}}\\epsilon,t)\\text{||}^{2}$<br>\n",
+    "$\\text{6.}\\quad\\ \\text{until converged.}$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H3>Sampling Algorithm</H3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\text{1.}\\quad\\ x_{T}\\sim\\mathcal{N}(0,I)$<br>\n",
+    "$\\text{2.}\\quad\\quad\\ \\text{for t=T,...,1 do}$<br>\n",
+    "$\\text{3.}\\quad\\quad\\quad\\quad\\ z\\sim\\mathcal{N}(0,I)\\quad\\text{if }t>1,\\text{else }z=0$<br>\n",
+    "$\\text{4.}\\quad\\quad\\quad\\quad\\ x_{t-1}=\\frac{1}{\\sqrt{\\alpha_{t}}}\\left(x_{t}-\\frac{1-\\alpha_{t}}{\\sqrt{1-\\bar{alpha_{t}}}}\\epsilon_{\\theta}(x_{t},t)\\right)\\sigma_{t}z$<br>\n",
+    "$\\text{5.}\\quad\\quad\\ \\text{end for}$<br>\n",
+    "$\\text{6.}\\quad\\quad\\ \\text{return }x_{0}$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<H3>Additional Notes On Ho et al. [3]</H3>"
    ]
   },
@@ -310,18 +371,6 @@
     "2. Authors also conclude that B is intractable.\n",
     "3. Authors conclude that A and C are reparamaterizations of the same problem."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<H3>Model Architecture U-Net</H3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
