--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The negative log-likelihood $-p_{\\theta}(x_{0}) serves as an appropriate loss function however computing the marginal distribution $p_{\\theta}(x_{0})$ requires integration over all 1:T latent dimensions which becomes intractable quickly.\n",
+    "The negative log-likelihood $-p_{\\theta}(x_{0})$ serves as an appropriate loss function however computing the marginal distribution $p_{\\theta}(x_{0})$ requires integration over all 1:T latent dimensions which becomes intractable quickly.\n",
     "$p_{\\theta}(x_{0})=\\int p_{\\theta}(x_{0:T}dx_{1:T}$<br>"
    ]
   },
@@ -395,6 +395,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
