--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -349,11 +349,11 @@
    "metadata": {},
    "source": [
     "$\\text{1.}\\quad\\ x_{T}\\sim\\mathcal{N}(0,I)$<br>\n",
-    "$\\text{2.}\\quad\\quad\\ \\text{for t=T,...,1 do}$<br>\n",
-    "$\\text{3.}\\quad\\quad\\quad\\quad\\ z\\sim\\mathcal{N}(0,I)\\quad\\text{if }t>1,\\text{else }z=0$<br>\n",
-    "$\\text{4.}\\quad\\quad\\quad\\quad\\ x_{t-1}=\\frac{1}{\\sqrt{\\alpha_{t}}}\\left(x_{t}-\\frac{1-\\alpha_{t}}{\\sqrt{1-\\bar{alpha_{t}}}}\\epsilon_{\\theta}(x_{t},t)\\right)\\sigma_{t}z$<br>\n",
-    "$\\text{5.}\\quad\\quad\\ \\text{end for}$<br>\n",
-    "$\\text{6.}\\quad\\quad\\ \\text{return }x_{0}$<br>\n"
+    "$\\text{2.}\\quad\\ \\text{for t=T,...,1 do}$<br>\n",
+    "$\\text{3.}\\quad\\quad\\ z\\sim\\mathcal{N}(0,I)\\quad\\text{if }t>1,\\text{else }z=0$<br>\n",
+    "$\\text{4.}\\quad\\quad\\ x_{t-1}=\\frac{1}{\\sqrt{\\alpha_{t}}}\\left(x_{t}-\\frac{1-\\alpha_{t}}{\\sqrt{1-\\bar{alpha_{t}}}}\\epsilon_{\\theta}(x_{t},t)\\right)\\sigma_{t}z$<br>\n",
+    "$\\text{5.}\\quad\\ \\text{end for}$<br>\n",
+    "$\\text{6.}\\quad\\ \\text{return }x_{0}$<br>\n"
    ]
   },
   {
