--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -99,6 +99,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Axiom: Any forward step of the process can be directly sampled as shown here:<br>\n",
+    "$q(x_{t}|x_{0})=\\mathcal{N}(x_{t};\\sqrt{\\bar{\\alpha}_{t}}x_{0},(1-\\bar{\\alpha}_{t})I)$<br>\n",
+    "where<br>\n",
+    "$\\bar{\\alpha}_{t}=\\prod\\limits_{s=1}^{t} a_{s}$<br>\n",
+    "and<br>\n",
+    "$\\alpha_{s}=1-\\beta_{s}$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Axiom: $q(x_{T}|x_{0})\\rightarrow\\mathcal{N}(0,I)$ as $T\\rightarrow\\inf$.<br>"
    ]
   },
@@ -113,16 +125,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<H3>Note on variance of ELBO using this approach</H3>"
+    "Ho et al. [3] show that, in addition to the reparameterization trick discussed in the section \"Alternative Formulation of the ELBO Objective for Reduced Variance, sampling from any forward step using an additional auxillary noise variable $\\epsilon$ may alsoe reduce variance.<br> "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Axiom: This variational lower bound (aka the Evidence Lower Bound - ELBO) has high variance.<br>\n",
-    "Ho et al. [3] show that, in addition to a reparameterization trick discussed in the following section, \n",
-    "sampling from any forward step using an additional auxillary noise variable $\\epsilon$ reduces variance.<br>\n",
     "$x_{t}=\\sqrt{\\bar{\\alpha_{t}}}x_{t-1}+\\sqrt{1-\\bar{\\alpha_{t}}}\\epsilon$<br>\n",
     "$\\text{where}$<br>\n",
     "$\\epsilon\\sim\\mathcal{N}(0,I)\\text{ and are I.I.D. }$<br> \n"
@@ -171,8 +180,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The negative log-likelihood $-p_{\\theta}(x_{0})$ serves as an appropriate loss function however computing the marginal distribution $p_{\\theta}(x_{0})$ requires integration over all 1:T latent dimensions which becomes intractable quickly.\n",
-    "$p_{\\theta}(x_{0})=\\int p_{\\theta}(x_{0:T}dx_{1:T}$<br>"
+    "<H3>Loss Function</H3>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training the decoder consists of optimizing the variaional lower bound (aka Evidence Lower Bound (ELBO)) on negative log likelihood.<br>\n",
+    "$\\mathbb{E}[-log\\ p_{\\theta}(x_{0})]\\le\\mathbb{E}_{q}\\left[-log\\frac{p_{\\theta}(x_{1:T})}{q(x_{1:T}|x_{0})}\\right]$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q}\\left[-log\\ p(x_{T})-\\sum_{t\\ge1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}\\right]=L$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Computing the marginal distribution $p_{\\theta}(x_{0})=\\int p_{\\theta}(x_{0:T})dx_{1:T}$ requires integration over all 1:T latent dimensions which becomes intractable quickly.<br>\n"
    ]
   },
   {
@@ -199,18 +223,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Axiom: Any forward step of the process can be directly sampled as shown here:<br>\n",
-    "$q(x_{t}|x_{0})=\\mathcal{N}(x_{t};\\sqrt{\\bar{\\alpha}_{t}}x_{0},(1-\\bar{\\alpha}_{t})I)$<br>\n",
-    "where<br>\n",
-    "$\\bar{\\alpha}_{t}=\\prod\\limits_{s=1}^{t} a_{s}$<br>\n",
-    "and<br>\n",
-    "$\\alpha_{s}=1-\\beta_{s}$<br>\n"
+    "<H3>Note on variance of ELBO using this approach</H3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Axiom: This variational lower bound (aka the Evidence Lower Bound - ELBO) has high variance.<br>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,49 +263,6 @@
    "metadata": {},
    "source": [
     "Both of the $q(x_{t-1}|x+{t}, x_{0})$ and $p_{\\theta}(x_{t-1}|x_{t}))$ arguments of the KL-Divergence term are both Gaussian and therefore the KL-Divergence term can be evaluated in closed form. This also reduces variance during the training process because instead of aiming to reconstruct Monte Carlo samples, targeting of the reverse step is the true posterior of forward process given $x_{0}$. (!insert ref here)<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<H3>Implementation of Reverse Diagonal Normal Diffusion Process</H3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ho et al. [3] show that fixing the covariance parameter of the gaussian (shown again for convenience below) to time based constants allows us to learn the parameter for the means $\\mu_{\\theta}(x_{t},t)$<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$p_{\\theta}(x_{t-1}|x_{t})\\sim\\mathcal{N}(x_{t-1};\\mu_{\\theta}(x+_{t},t),\\sum_{\\theta}(x_{t},t))$<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<H3>Loss Function</H3>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The negative log-likelihood serves as the basis for the loss function that will be used in the backwards pass of the neural network tasked with learning to predict the noise (see \"Additional Notes On Ho et al.\" section below).<br>\n",
-    "$-log(p_{\\theta}(x_{0}))$<br>"
    ]
   },
   {
@@ -376,6 +354,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ho et al. [3] show that fixing the covariance parameter of the gaussian (shown again for convenience below) to time based constants allows us to learn the parameter for the means $\\mu_{\\theta}(x_{t},t)$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$p_{\\theta}(x_{t-1}|x_{t})\\sim\\mathcal{N}(x_{t-1};\\mu_{\\theta}(x+_{t},t),\\sum_{\\theta}(x_{t},t))$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<H2>References</H2>"
    ]
   },
@@ -395,18 +387,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
