Fixed line 5 of 'Training Algorithm' section.

--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -311,7 +311,7 @@
     "$\\text{3.}\\quad\\quad\\ t\\sim\\text{Uniform}({1,\\dots,T})$<br>\n",
     "$\\text{4.}\\quad\\quad\\ \\epsilon\\sim\\mathcal{N}(0,I)$<br>\n",
     "$\\text{5.}\\quad\\quad\\ \\text{Take gradient descent step on}$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\nabla_{\\theta}\\text{\\\\}\\epsilon\\ -\\ \\epsilon_{\\theta}(\\sqrt{\\bar{\\alpha_{t}}}x_{0} + \\sqrt{1-\\bar{\\alpha_{t}}}\\epsilon,t)\\text{||}^{2}$<br>\n",
+    "$\\quad\\quad\\quad\\quad\\nabla_{\\theta}\\text{||}\\epsilon\\ -\\ \\epsilon_{\\theta}(\\sqrt{\\bar{\\alpha_{t}}}x_{0} + \\sqrt{1-\\bar{\\alpha_{t}}}\\epsilon,t)\\text{||}^{2}$<br>\n",
     "$\\text{6.}\\quad\\ \\text{until converged.}$<br>\n"
    ]
   },
