Added notes on PixelCNN++ architecture used in Ho et al.

--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -283,17 +283,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<H3>Model Architecture U-Net</H3>"
+    "<H3>Model Architecture PixelCNN++</H3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ho et al. Describe the model architecture they used in [3].\n",
-    "1. "
+    "Ho et al. Describe the model architecture they used in [3].<br>\n",
+    "1. Their neural net architecture follows the backbone of PixelCNN++[ref PixelCNN++ paper here].<br>\n",
+    "2. Weight normalization [weight norm ref here] was replaced with group normalization [group norm ref here].<br>\n",
+    "3. Their 32x32 models use four feature map resolutions (32x32) to 4x4, and their 256x256 models use six.<br>\n",
+    "4. All models have two convolutional residual blocks per resolution level and self-attention blocks at the 16x16 resolution between the convolutional blocks [ref for convolutional blocks].<br>\n",
+    "5. Diffusion time $t$ is specified by adding the Transformer sinusoidal position embedding [ref] into each block.<br>\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -345,9 +360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Authors conclude that a Denoising Diffusion Probabilistic Model (DDPM) can predict A.) Mean of the noise, B.) Original Image, and C.) Noise of the image.\n",
-    "2. Authors also conclude that B is intractable.\n",
-    "3. Authors conclude that A and C are reparamaterizations of the same problem."
+    "1. Authors conclude that a Denoising Diffusion Probabilistic Model (DDPM) can predict:<br>\n",
+    "    A.) mean of the noise<br>\n",
+    "    B.) original image<br>\n",
+    "    C.) noise of the image<br>\n",
+    "2. Authors also conclude that B is intractable.<br>\n",
+    "3. Authors conclude that A and C are reparamaterizations of the same problem.<br>"
    ]
   },
   {
