Worked on ELBO doc and improved clarity of background info on diffusion model.

--- a/probabilistic-deep-learning.ipynb
+++ b/probabilistic-deep-learning.ipynb
@@ -21,21 +21,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diffusion models are a class of latent variable generative models capable of generating samples that are distributed \"similarly\" as the training dataset. Learning is achieved by applying a series of forward Diffusion models apply progressively more noise to the data during a sequence of transformation steps. A neural network can be trained to learn how to generate samples"
+    "Diffusion models are a class of latent variable generative models capable of generating samples that are distributed \"similarly\" as those in a given training dataset.<br>\n",
+    "\n",
+    "Three major parts make up a diffusion model:<br>\n",
+    "1. forward process: incrementally add noise to a training data observation until the structure of the observation is destroyed<br>\n",
+    "2. reverse process: use a neural network to learn something about the forward diffusion process so that it can generate samples that are distributed similarly to the samples in the training set.<br>\n",
+    "3. sampling method<br>\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A diffusion model learns how do generate samples that are \"similar\" to the data it trains on by applying a series of forward and reverse diffusion processes. The forward process will be a fixed transformation while the reverse process will be a neural network."
+    "$\\large x_{0}\\overset{forward (encoder)}{\\underset{reverse (decoder)}\\rightleftarrows} x_{1:T}$<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$x_{0}\\overset{forward (encoder)}{\\underset{reverse (decoder)}\\rightleftarrows} x_{1:T}$<br>"
+    "$\\large x_{0}\\overset{q(x_{1}|x_{0})}{\\underset{p_{\\theta}(x_{0}|x_{1})}\\rightleftarrows} x_{1} \\overset{q(x_{2}|x_{1})}{\\underset{p_{\\theta}(x_{1}|x_{2})}\\rightleftarrows} x_{2}\\ \\dots\\ x_{t} \\overset{q(x_{t}|x_{t-1})}{\\underset{p_{\\theta}(x_{t-1}|x_{t})}\\rightleftarrows}\\ x_{T-1}\\ \\overset{q(x_{T}|x_{T-1})}{\\underset{p_{\\theta}(x_{T-1}|x_{T})}\\rightleftarrows} x_{T}$<br>"
    ]
   },
   {
@@ -49,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A forward diffusion process of $T\\in(0,\\inf)$ sequential transformations, $\\xrightarrow{\\text{forward}}$, to a random variable $x_{0}$ "
+    "A forward diffusion process of $T\\in(0,\\inf)$ sequential transformations is applied to an observation of variable $x_{0}$ from the training set.<br> "
    ]
   },
   {
@@ -66,13 +72,6 @@
     "Each latent variable $x_{t}\\in x_{1:T}$ consists of the sum of noise and the value of $x_{t-1}$.<br>\n",
     "The joint distribution $q(x_{1:T}|x_{0})$ of latent variables $x_{1:T}$ given the original manifest variable $x_{0}$ is memoryless.<br>\n",
     "$q(x_{t:T}|x_{0})=\\prod\\limits_{t=1}^{T}{q(x_{t}|x_{t-1})}\\quad\\quad\\quad\\quad\\text{(Markov Property)}$<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ho et al. [3] show that a reparameterization as follows provides "
    ]
   },
   {
@@ -125,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ho et al. [3] show that, in addition to the reparameterization trick discussed in the section \"Alternative Formulation of the ELBO Objective for Reduced Variance, sampling from any forward step using an additional auxillary noise variable $\\epsilon$ may alsoe reduce variance.<br> "
+    "Ho et al. [3] show that, in addition to the reparameterization trick discussed in the section \"Alternative Formulation of the ELBO Objective for Reduced Variance\", sampling from any forward step using an additional auxillary noise variable $\\epsilon$ may alsoe reduce variance.<br> "
    ]
   },
   {
@@ -148,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a fully developed latent space, we can train a neural network to learn the parameters needed to generate similarly distributed samples."
+    "Now that we have discussed how the forward diffusion process takes an observation from the training data and creates a latent sample from the latent space by using incremental transformations. We will now design and train a neural network to learn the parameters needed to generate similarly distributed samples from that latent space. Transforming those generated latent samples back to the space of our training data should reveal samples that are distributed similarly as the sample observations in the training set."
    ]
   },
   {
@@ -187,9 +186,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training the decoder consists of optimizing the variaional lower bound (aka Evidence Lower Bound (ELBO)) on negative log likelihood.<br>\n",
-    "$\\mathbb{E}[-log\\ p_{\\theta}(x_{0})]\\le\\mathbb{E}_{q}\\left[-log\\frac{p_{\\theta}(x_{1:T})}{q(x_{1:T}|x_{0})}\\right]$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q}\\left[-log\\ p(x_{T})-\\sum_{t\\ge1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}\\right]=L$<br>"
+    "Here the approach of minimizing the negative log-likelihood is used as a starting point.<br>\n",
+    "$$\\text{objective: }\\underset{\\theta}{\\operatorname{argmin}}\\left[\\ -log\\ p_{\\theta}(x_{0})\\right]$$ "
    ]
   },
   {
@@ -203,20 +201,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One solution to the dimensionallity problem is to use a variational lower bound.<br>\n",
-    "$log\\ p_\\theta(x)\\ge\\text{variational lower bound (ELBO)}$ which is based upon the KL-Divergence $D_{KL}(p||q)=\\int\\ p(x)\\ log\\ \\frac{p(x)}{q(x)}dx$<br>"
+    "One solution to the dimensionallity problem is to use a variational lower bound (also known as Evidence Lower Bound or ELBO).<br>\n",
+    "$$-log\\ p_\\theta(x_{0})\\le\\mathbb{E}_{x_{1:T}\\sim\\ q(x_{1:T}|x_{0})}\\left[-\\ log\\frac{p_{\\theta}(x_{0}|x_{1:T})}{q(x_{1:T}|x_{0})}\\right]$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$log\\ p_\\theta(x_{0})\\ge\\mathbb{E}_{q(x_{1:T}|x_{0})}[log\\ p_{\\theta}(x_{0}|x_{1:T})] - D_{KL}(q(x_{1:T}|x_{0})\\ ||\\ p_{\\theta}(x_{1:T}))$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}[log\\ p_{\\theta}(x_{0}|x_{1:T})] - \\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[\\frac{q(x_{1:T}|x_{0})}{p_{\\theta}(x_{1:T})}\\right]$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[log\\ p_{\\theta}(x_{0}|x_{1:T})+log\\ \\frac{p_{\\theta}(x_{1:t})}{q(x_{1:T}|x_{0})} \\right]$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[log\\ p_{\\theta}(x_{0})+\\sum\\limits_{t\\ge1}\\ log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x{t-1})}\\right]$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[log\\ \\frac{p_{\\theta}(x_{0:T})}{q(x_{1:T}|x_{0})}\\right]$<br>\n",
-    "$\\quad\\quad\\quad\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[log\\ p_{\\theta}(x_{t})+\\sum\\limits_{t\\ge1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}\\right]$<br>"
+    "$\\mathbb{E}[-log\\ p_{\\theta}(x_{0})]\\le\\mathbb{E}_{q}\\left[-log\\frac{p_{\\theta}(x_{0:T})}{q(x_{1:T}|x_{0})}\\right]$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$L\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-\\ log\\ \\frac{p_{\\theta}(x_{0}|x_{1:T})}{q(x_{1:T}|x_{0})}\\right]$<br>\n",
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ p(x_{T})-\\sum\\limits_{t\\ge 1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}\\right]$<br>\n",
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ p(x_{T})-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}-log\\frac{p_{\\theta}(x_{0}|x_{1})}{q(x_{1}|x_{0})}\\right]$<br>\n",
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ p(x_{T})-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t-1}|x_{t},x_{0})}\\cdot\\frac{q(x_{t-1}|x_{0})}{q(x_{t}|x_{0})}-log\\frac{p_{\\theta}(x_{0}|x_{1})}{q(x_{1}|x_{0})}\\right]$<br>\n",
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ \\frac{p(x_{T})}{q(x_{T}|x_{0})}-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t-1}|x_{t},x_{0})}\\cdot\\frac{q(x_{t-1}|x_{0})}{q(x_{t}|x_{0})}-log\\ p_{\\theta}(x_{0}|x_{1})\\right]$<br>\n",
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[D_{KL}(q(x_{T}|x_{0})||p(x_{T}))+\\sum\\limits_{t>1}D_{KL}(q(x_{t-1}|x_{t},x_{0})||p_{\\theta|(x_t-1}|x_{t}))-\\ log\\ p_{\\theta|(x_{0}|x_[1})\\right]$<br>"
    ]
   },
   {
