Added additional background on DDPM objective function.

--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -221,7 +221,14 @@
     "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ p(x_{T})-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t}|x_{t-1})}-log\\frac{p_{\\theta}(x_{0}|x_{1})}{q(x_{1}|x_{0})}\\right]$<br>\n",
     "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ p(x_{T})-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t-1}|x_{t},x_{0})}\\cdot\\frac{q(x_{t-1}|x_{0})}{q(x_{t}|x_{0})}-log\\frac{p_{\\theta}(x_{0}|x_{1})}{q(x_{1}|x_{0})}\\right]$<br>\n",
     "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[-log\\ \\frac{p(x_{T})}{q(x_{T}|x_{0})}-\\sum\\limits_{t>1}log\\frac{p_{\\theta}(x_{t-1}|x_{t})}{q(x_{t-1}|x_{t},x_{0})}\\cdot\\frac{q(x_{t-1}|x_{0})}{q(x_{t}|x_{0})}-log\\ p_{\\theta}(x_{0}|x_{1})\\right]$<br>\n",
-    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[D_{KL}(q(x_{T}|x_{0})||p(x_{T}))+\\sum\\limits_{t>1}D_{KL}(q(x_{t-1}|x_{t},x_{0})||p_{\\theta|(x_t-1}|x_{t}))-\\ log\\ p_{\\theta|(x_{0}|x_[1})\\right]$<br>"
+    "$\\quad\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[D_{KL}(q(x_{T}|x_{0})||p(x_{T}))+\\sum\\limits_{t>1}D_{KL}(q(x_{t-1}|x_{t},x_{0})||p_{\\theta}(x_{t-1}|x_{t}))-\\ log\\ p_{\\theta}(x_{0}|x_{1})\\right]$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both of the $q(x_{t-1}|x+{t}, x_{0})$ and $p_{\\theta}(x_{t-1}|x_{t}))$ arguments of the KL-Divergence term are both Gaussian and therefore the KL-Divergence term can be evaluated in closed form. This also reduces variance during the training process because instead of aiming to reconstruct Monte Carlo samples, targeting of the reverse step is the true posterior of forward process given $x_{0}$. (!insert ref here)<br>"
    ]
   },
   {
@@ -249,25 +256,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sohl-Dickstein demonstrate the derivation of a reduced objective [1, Appendix B] which is shown below:\n",
-    "$\\mathbb{E}_{q_(x_{1:T}|x_{0})}\\left[-D_{KL}(q(x_{T}|x_{0})||p_{\\theta}(x_{T}))-\\sum\\limits_{t>1}D_{KL}(q(x_{t-1}|x+{t}, x_{0})\\ ||\\ p_{\\theta}(x_{t-1}|x_{t}))+\\ log\\ p_{\\theta}(x_{0}|x_{1})\\right]$<br>\n"
+    "Ho et al. demonstrate the derivation of a reduced objective [3] which is shown below:<br>\n",
+    "$L\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[\\underbrace{D_{KL}(q(x_{T}|x_{0})||p(x_{T}))}_{L_{T}} +\\sum\\limits_{t>1}\\underbrace{D_{KL}(q(x_{t-1}|x_{t},x_{0})||p_{\\theta}(x_{t-1}|x_{t}))}_{L_{t-1}}-\\ \\underbrace{log\\ p_{\\theta}(x_{0}|x_{1})}_{L_{0}}\\right]$<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$p_{\\theta}(x_{T})$ is fixed since this is just the last(first) step in the forward(reverse) process.<br>\n",
-    "$q(x_{t}|x_{0})$ is also fixed ... (insert rational here)<br>\n",
-    "therefore the first term of the above expectation can be simplified to:<br>\n",
-    "$\\mathbb{E}_{q_(x_{1:T}|x_{0})}\\left[(0)-\\sum\\limits_{t>1}D_{KL}(q(x_{t-1}|x+{t}, x_{0})\\ ||\\ p_{\\theta}(x_{t-1}|x_{t}))+\\ log\\ p_{\\theta}(x_{0}|x_{1})\\right]-C$<br>"
+    "$L_{0}\\ $, Data Scaling and Reverse Process Decoder<br>\n",
+    "Image data consists of typical integer based RGB vectors ranging in intensity from {0 (black), 1, ..., 255} scaled linearly to [-1,1].<br>\n",
+    "The last term of the reverse process  is set to an independen discrete decoder derived from the Gaussian $\\mathcal{N}(x_{0};\\mu_{\\theta}(x_{1},1),\\ \\sigma^{2}_{1}I)$[3]<br>\n",
+    "$p_{\\theta}(x_{0}|x_{1})=\\prod\\limits_{i=1}^{D}\\int_{\\delta_{-}(x_{0}^{i})}^{\\delta_{+}(x_{0}^{i})}\\mathcal{N}(x;\\mu_{\\theta}^{i}(x_{1},1),\\ \\sigma_{1}^{2})dx$<br>\n",
+    "\n",
+    "where<br>\n",
+    "$\\delta_{+}(x)=\\begin{cases}\n",
+    "\\inf\\quad\\quad\\quad\\quad\\ if\\ x=1\\\\\n",
+    "x+\\frac{1}{255}\\quad\\quad\\quad\\quad\\ if\\ x<1\n",
+    "\\end{cases}\n",
+    "$<br>\n",
+    "and<br>\n",
+    "$\\delta_{-}(x)=\\begin{cases}\n",
+    "-\\inf\\quad\\quad\\quad\\quad\\ if\\ x=-1\\\\\n",
+    "x-\\frac{1}{255}\\quad\\quad\\quad\\quad\\ if\\ x>-1\n",
+    "\\end{cases}\n",
+    "$<br>\n",
+    "At the end of the sampling process $\\mu_{\\theta}(x_{1},1)$ is displayed.<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both of the $q(x_{t-1}|x+{t}, x_{0})$ and $p_{\\theta}(x_{t-1}|x_{t}))$ arguments of the KL-Divergence term are both Gaussian and therefore the KL-Divergence term can be evaluated in closed form. This also reduces variance during the training process because instead of aiming to reconstruct Monte Carlo samples, targeting of the reverse step is the true posterior of forward process given $x_{0}$. (!insert ref here)<br>"
+    "$L_{T}$ and the Forward Process<br>\n",
+    "$\\quad\\ p_{\\theta}(x_{T})$ is fixed since this is just the last(first) step in the forward(reverse) process.<br>\n",
+    "$\\quad\\ q(x_{t}|x_{0})$ is also fixed as was done by Ho et al. [3] (Need some rationale here still)<br>\n",
+    "$\\quad\\ $ therefore the first term of the above expectation can be simplified to:<br>\n",
+    "$\\quad\\ L\\quad=\\mathbb{E}_{q(x_{1:T}|x_{0})}\\left[\\underbrace{0}_{L_{T}} +\\sum\\limits_{t>1}\\underbrace{D_{KL}(q(x_{t-1}|x_{t},x_{0})||p_{\\theta}(x_{t-1}|x_{t}))}_{L_{t-1}}-\\ \\underbrace{log\\ p_{\\theta}(x_{0}|x_{1})}_{L_{0}}\\right]$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reverse Process and $L_{1:T-1}$<br>\n",
+    "$\\quad\\ L_{t-1}=\\mathbb{E}_{q}\\left[\\frac{1}{2\\sigma^{2}_{t}}||\\bar{\\mu_{t}}(x_{t},x_{0})-\\mu_{\\theta}(x_{t},t)||^2\\right]+C$<br>\n",
+    "$\\quad\\ $ Section 3.2 of Ho et al. [3] discuss proof of how a reparameterization of $L_{t-1}$ results in a simplified training objective shown below.<br>"
    ]
   },
   {
@@ -284,11 +318,6 @@
     "Ho et al. [3] demonstrate that more realistic sampling can be obtained by eliminating the step-specific weighting term $w_{t}$.<br>\n",
     "$loss=\\mathbb{E}_{x_{0},\\ \\epsilon,\\ t}\\left[(1)||\\epsilon - \\epsilon_{\\theta}(x_{t},t)||^{2}\\right]$<br>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
