--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -69,7 +69,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each latent variable $x_{t}\\in x_{1:T}$ consists of the sum of noise and the value of $x_{t-1}$.<br>\n",
     "The joint distribution $q(x_{1:T}|x_{0})$ of latent variables $x_{1:T}$ given the original manifest variable $x_{0}$ is memoryless.<br>\n",
     "$q(x_{t:T}|x_{0})=\\prod\\limits_{t=1}^{T}{q(x_{t}|x_{t-1})}\\quad\\quad\\quad\\quad\\text{(Markov Property)}$<br>"
    ]
@@ -78,6 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Each latent variable $x_{t}\\in x_{1:T}$ consists of the sum of noise and the value of $x_{t-1}$.<br>\n",
     "Starting at point $x_{0}\\sim\\ q$, where $q$ is a probability distribution that will be learned, add noise to the original data in the following fashion:<br>\n",
     "$x_{t}=\\sqrt{1-\\beta_{t}}x_{t-1}+\\sqrt{\\beta_{t}}z_{t}$<br>\n",
     "$\\text{where}$<br>\n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "Axiom: Any forward step of the process can be directly sampled as shown here:<br>\n",
-    "$q(x_{t}|x_{0})=\\mathcal{N}(x_{t};\\sqrt{\\bar{\\alpha}_{t}}x_{0},(1-\\bar{\\alpha}_{t})I)$<br>\n",
+    "$q(x_{t}|x_{0})=\\mathcal{N}(x_{t};\\sqrt{\\bar{\\alpha}_{t}}x_{0},\\sqrt{1-\\bar{\\alpha}_{t}}I)$<br>\n",
     "where<br>\n",
     "$\\bar{\\alpha}_{t}=\\prod\\limits_{s=1}^{t} a_{s}$<br>\n",
     "and<br>\n",
@@ -118,6 +118,44 @@
    "metadata": {},
    "source": [
     "Let's constrain ourselves to a versy small $B_{t}\\ll1$. There are claims (refs??) that using a small step size makes the reverse process of learning the diffusion process more stable.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can easily create a linear schedule of noise as used by Ho et al. in [3]. See linear-noise-scheduler.ipynb for more details. [ref to lin noise scheduler notebook]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import LinearNoiseScheduler as LNS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linearNoiseScheduler.betas:  tensor([0.0100, 0.0311, 0.0522, 0.0733, 0.0944, 0.1156, 0.1367, 0.1578, 0.1789,\n",
+      "        0.2000])\n",
+      "LinearNoiseScheduler.alphas:  tensor([0.9900, 0.9689, 0.9478, 0.9267, 0.9056, 0.8844, 0.8633, 0.8422, 0.8211,\n",
+      "        0.8000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "linearNoiseScheduler = LNS.LinearNoiseScheduler(10, 0.01, 0.2)\n",
+    "print(\"linearNoiseScheduler.betas: \", linearNoiseScheduler.betas)\n",
+    "print(\"LinearNoiseScheduler.alphas: \", linearNoiseScheduler.alphas) \n"
    ]
   },
   {
@@ -439,6 +477,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
