Added details about the training strategy in DPPM paper.

--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -337,10 +337,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reverse Process and $L_{1:T-1}$<br>\n",
+    "$L_{1:T-1}$ and the Reverse Process<br>\n",
     "$\\quad\\ L_{t-1}=\\mathbb{E}_{q}\\left[\\frac{1}{2\\sigma^{2}_{t}}||\\bar{\\mu_{t}}(x_{t},x_{0})-\\mu_{\\theta}(x_{t},t)||^2\\right]+C$<br>\n",
     "$\\quad\\ $ Section 3.2 of Ho et al. [3] discuss proof of how a reparameterization of $L_{t-1}$ results in a simplified training objective shown below.<br>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -361,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<H3>Model Architecture PixelCNN++</H3>"
+    "<H3>Modified PixelCNN++ Model Architecture</H3>"
    ]
   },
   {
@@ -405,6 +410,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<H3>Sampling Algorithm</H3>"
    ]
@@ -437,7 +447,13 @@
     "    B.) original image<br>\n",
     "    C.) noise of the image<br>\n",
     "2. Authors also conclude that B is intractable.<br>\n",
-    "3. Authors conclude that A and C are reparamaterizations of the same problem.<br>"
+    "3. Authors conclude that A and C are reparamaterizations of the same problem where:<br>\n",
+    "4. A uses a parameterization of $\\mu_{\\theta}(x_{t},t)$ as a model to predict the mean of the noise added $\\tilde{\\mu_{t}}$<br>\n",
+    "5. C uses another parameterization of $\\mu_{\\theta}(x_{t},t)$ as a model to predict the noise added $\\epsilon$.<br>\n",
+    "\n",
+    "Their their respective loss functions are:<br>\n",
+    "1. \n",
+    "2. "
    ]
   },
   {
