--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -11,6 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "@article{ho2020denoising,\n",
+    "  title={Denoising Diffusion Probabilistic Models},\n",
+    "  author={Jonathan Ho and Ajay Jain and Pieter Abbeel},\n",
+    "  year={2020},\n",
+    "  journal={arXiv preprint arxiv:2006.11239}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Insert an image here that illustrates the model architecture.<br>\n",
     "Training Instance X $\\rightarrow\\rightarrow\\rightarrow$ Latent Instance Z<br>\n",
     "Latent Instance Z $\\rightarrow$ Training Instance X<br>\n",
@@ -490,9 +502,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
