Improved attentionBlocks code and added a paragraph to the Diffusion Models ipython notebook.

--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -33,6 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From an applied statistics point of view, diffusion is the process of transforming a complex distribtuion to a simple one that we choose a priori. If the domain of our chosen simple distribution is the same as the domain of the original complex distribution, then under certain conditions, iterative application of a learned transition kernel on the sample of any distribution would lead to samples from the more simple distribution we choose a priori. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Diffusion models are a class of latent variable generative models capable of generating samples that are distributed \"similarly\" as those in a given training dataset.<br>\n",
     "\n",
     "Three major parts make up a diffusion model:<br>\n",
