Added ref ffrom ExplainingAI's youtube video called "Denoisign Diffusion Probabilistic Models | DDPM Explained"

--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -488,6 +488,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Diffusion is a process that satisfies a stochastic differenctial equatio and has a differential update formula of the form $dX_{t}=\\alpha (X_{t}, t)dt + $ (random number from mean zero and  variance $\\mu(X{t},t)dt)$ [4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<H2>References</H2>"
    ]
   },
@@ -498,7 +505,8 @@
     "1. Sohl-Dickstein J. et al., \"Deep Unsupervised Learning using\n",
     "Nonequilibrium Thermodynamics\" arXiv:1503.03585v, rev. Nov. 18, 2015.\n",
     "2. Feller W., \"On the Theory of Stochastic Processes, with Particular Reference to Applications\", \n",
-    "3. Ho, J. et al., \"Denoising Diffuision Probabilistic Models\", Dec. 16, 2020, arXi:200611239v2. \n"
+    "3. Ho, J. et al., \"Denoising Diffuision Probabilistic Models\", Dec. 16, 2020, arXi:200611239v2. \n",
+    "4. \"Denoising Diffusion Probabilistic Models\" by ExplainingAI at www.youtube.com/watch?v=H45IF4sUgiE."
    ]
   }
  ],
