Added somen annotations to notes in jupyter notebook, diffusion-models.ipynb.

--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -148,16 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import LinearNoiseScheduler as LNS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +497,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diffusion is a process that satisfies a stochastic differenctial equatio and has a differential update formula of the form $dX_{t}=\\alpha (X_{t}, t)dt + $ (random number from mean zero and  variance $\\mu(X{t},t)dt)$ [4]"
+    "Diffusion is a process that satisfies a stochastic differenctial equatio and has a differential update formula of the form:<br>\n",
+    "$dX_{t}=\\underbrace{\\alpha (X_{t}, t)dt}_{\\text{deterministic  component}} + \\underbrace{(\\text{random number from mean zero and  variance} \\mu(X{t},t)dt)}_{\\text{stochastic component}}.$ [4]"
    ]
   },
   {
