--- a/diffusion-models.ipynb
+++ b/diffusion-models.ipynb
@@ -498,7 +498,7 @@
    "metadata": {},
    "source": [
     "Diffusion is a process that satisfies a stochastic differenctial equatio and has a differential update formula of the form:<br>\n",
-    "$dX_{t}=\\underbrace{\\alpha (X_{t}, t)dt}_{\\text{deterministic  component}} + \\underbrace{(\\text{random number from mean zero and  variance} \\mu(X{t},t)dt)}_{\\text{stochastic component}}.$ [4]"
+    "$dX_{t}=\\underbrace{\\alpha (X_{t}, t)dt}_{\\text{deterministic  component}} +\\, \\underbrace{(\\text{random number from mean zero and  variance}\\, \\mu(X{t},t)dt)}_{\\text{stochastic component}}.$ [4]"
    ]
   },
   {
